# torchcir

./: README.md  pyproject.toml
src/torchcir/: __init__.py  cnn.py  ffnn.py  trainer.py
tests/: test_imports.py
